crates/solidity-v2/testing/snapshots/diagnostics_output/structure/payable_function_type_must_be_external/default_visibility/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7415] Error: Only external function types can be payable.
   ╭─[input.sol:7:16]
   │
 7 │     function f(function() payable cb) public {}
   │                ──────────┬──────────  
   │                          ╰──────────── Error occurred here.
───╯
